# Tigr_OS

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
src/kernel/drivers/: mod.rs
src/kernel/drivers/VGA/: mod.rs  test_VGA.rs
src/kernel/drivers/VGA/b8000/: color.rs  controler_VGA_0xb8000.rs  mod.rs  scroll.rs  vga_buffer.rs  vga_rendering.rs
